# backend-assesment

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.env  docker-compose.yml  pyproject.toml  setup.cfg
src/: gunicorn_conf.py
src/config/: app.py  asgi.py  pagination.py  settings.py  urls.py  wsgi.py
src/core/controllers/: account.py  base.py  ingestion.py
src/core/models/: enums.py  models.py
src/core/schemas/: account.py
src/core/services/: file_service.py
